Text Analyser Added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Shreem Shukla</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <script src="js/analytics.js" defer></script>
 </head>
 
 <body>
@@ -21,6 +22,7 @@
 
 
         <li><a href="src/contact.html">Contact</a></li>
+        <li><a href="text-analysis.html">Text Analyser</a></li>
       </ul>
     </nav>
   </header>
